[package]
name = "rust-backend-with-actix-web"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-rt = "2.5"
tokio = { version = "1", features = ["full"] }
uuid ={ version = "1.14.0", features = ["v4"]}
serde = {version = "1", features = ["derive"] }
aws-config = {version = "1.5.16", features = ["behavior-version-latest"]}
aws-sdk-dynamodb = "1.65.0"
env_logger = "0.11.6"
log = "0.4.26"
strum_macros = "0.27.1"
strum = {version = "0.27.1", features = ["derive"]}
derive_more = { version = "2.0.1", features = ["full"] }